[package]
name = "logger-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
teloxide = { version = "0.17.0", features = ["ctrlc_handler", "macros", "rustls"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

